<resources>
    <string name="app_name">Calculator Onboarding</string>
    <string name="text_button_zero">0</string>
    <string name="hint_clear">Clear</string>
    <string name="text_button_one">1</string>
    <string name="text_button_two">2</string>
    <string name="text_button_three">3</string>
    <string name="text_button_four">4</string>
    <string name="text_button_five">5</string>
    <string name="text_button_six">6</string>
    <string name="text_button_seven">7</string>
    <string name="text_button_eight">8</string>
    <string name="text_button_nine">9</string>
    <string name="text_plus">+</string>
    <string name="text_minus">-</string>
    <string name="text_multiply">*</string>
    <string name="text_divide">/</string>
    <string name="text_equals">=</string>
    <string name="hint_label">0</string>
    <string name="text_dot_button">.</string>
    <string name="divide_by_zero_message">Tried to divide by zero</string>
    <string name="too_many_dots">There is already a dot on the number</string>
    <string name="too_many_operators">Already an operator chosen, delete it or continue the operation</string>
    <string name="operator_with_no_number">Insert a number first</string>
    <string name="invalid_operation_message">Invalid operation</string>
    <string name="inputs_are_full">Inputs are full, modify the second number, push EQUALS or CLEAR the calculator</string>
    <string name="text_delete_button">Del</string>
    <string name="false_option">false</string>
</resources>
